# flight-tracker

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  setup.py
installer/: build-installer.ps1  flight-tracker.wxs
mockups/: README.md
packaging/: AppxManifest.template.xml  STORE_SUBMISSION.md  build-msix.ps1
src/: main.rs
src/flight_tracker/: __init__.py  cli.py
tests/: test_cli.py
